update kms 6.0 to client client over

--- a/app/src/main/res/layout/activity_palyer_layout.xml
+++ b/app/src/main/res/layout/activity_palyer_layout.xml
@@ -16,6 +16,6 @@
     <FrameLayout
         android:id="@+id/player_frag_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></FrameLayout>
+        android:layout_height="match_parent" />
 
 </FrameLayout>
