--- a/testutil/src/main/res/layout/activity_main.xml
+++ b/testutil/src/main/res/layout/activity_main.xml
@@ -1,12 +1,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/content_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
     <Button
@@ -15,11 +12,11 @@
         android:layout_height="wrap_content"
         android:text="ADD" />
 
-    <ListView
+
+    <com.example.jingbiaowang.testutil.FadListView
         android:id="@+id/content_ll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:animateLayoutChanges="true"
-        android:animationCache="true"></ListView>
+        android:animateLayoutChanges="true"></com.example.jingbiaowang.testutil.FadListView>
 
 </LinearLayout>
